--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ html:
 
 
 repository:
-  url                       : https://github.com/nasa/Transform-to-Open-Science-Book  # The URL to your book's repository
+  url                       : https://cgentemann.github.io/Transform-to-Open-Science-Book  # The URL to your book's repository
   branch                    : main  # Which branch of the repository should be used when creating links
 
 sphinx:
