--- a/_toc.yml
+++ b/_toc.yml
@@ -1,11 +1,17 @@
 format: jb-book
 root: index
 parts:
-- caption: About TOPS
+- caption: Open Science 101
   chapters:
   - file: Open-Science-101/README
     sections:
-    - file: Open-Science-101/Module-1/Lesson-1.md
+    - file: Open-Science-101/Module-1/readme.md
+      sections:
+      - file: Open-Science-101/Module-1/Lesson-1.md
+      - file: Open-Science-101/Module-1/Lesson-2.md
+      - file: Open-Science-101/Module-1/Lesson-3.md
+      - file: Open-Science-101/Module-1/Lesson-4.md
+      - file: Open-Science-101/Module-1/Lesson-5.md
 - caption: Open Science 101
   chapters:
   - file: About/About-Announcements
