--- a/_toc.yml
+++ b/_toc.yml
@@ -12,7 +12,39 @@ parts:
       - file: Open-Science-101/Module-1/Lesson-3.md
       - file: Open-Science-101/Module-1/Lesson-4.md
       - file: Open-Science-101/Module-1/Lesson-5.md
-- caption: Open Science 101
+    sections:
+    - file: Open-Science-101/Module-2/readme.md
+      sections:
+      - file: Open-Science-101/Module-2/Lesson-1.md
+      - file: Open-Science-101/Module-2/Lesson-2.md
+      - file: Open-Science-101/Module-2/Lesson-3.md
+      - file: Open-Science-101/Module-2/Lesson-4.md
+      - file: Open-Science-101/Module-2/Lesson-5.md
+    sections:
+    - file: Open-Science-101/Module-3/readme.md
+      sections:
+      - file: Open-Science-101/Module-3/Lesson-1.md
+      - file: Open-Science-101/Module-3/Lesson-2.md
+      - file: Open-Science-101/Module-3/Lesson-3.md
+      - file: Open-Science-101/Module-3/Lesson-4.md
+      - file: Open-Science-101/Module-3/Lesson-5.md
+    sections:
+    - file: Open-Science-101/Module-4/readme.md
+      sections:
+      - file: Open-Science-101/Module-4/Lesson-1.md
+      - file: Open-Science-101/Module-4/Lesson-2.md
+      - file: Open-Science-101/Module-4/Lesson-3.md
+      - file: Open-Science-101/Module-4/Lesson-4.md
+      - file: Open-Science-101/Module-4/Lesson-5.md
+    sections:
+    - file: Open-Science-101/Module-5/readme.md
+      sections:
+      - file: Open-Science-101/Module-5/Lesson-1.md
+      - file: Open-Science-101/Module-5/Lesson-2.md
+      - file: Open-Science-101/Module-5/Lesson-3.md
+      - file: Open-Science-101/Module-5/Lesson-4.md
+      - file: Open-Science-101/Module-5/Lesson-5.md
+- caption: About TOPS
   chapters:
   - file: About/About-Announcements
   - file: About/tops_faq
