--- a/_toc.yml
+++ b/_toc.yml
@@ -13,7 +13,7 @@ parts:
     - file: Open-Science-101/Module-1/Lesson-4.md
     - file: Open-Science-101/Module-1/Lesson-5.md
     
-  - file: Open-Science-101/Module-2/readme.md
+  - file: Open-Science-101/Module-2/readme
     sections:
     - file: Open-Science-101/Module-2/Lesson-1.md
     - file: Open-Science-101/Module-2/Lesson-2.md
@@ -21,7 +21,7 @@ parts:
     - file: Open-Science-101/Module-2/Lesson-4.md
     - file: Open-Science-101/Module-2/Lesson-5.md
     
-  - file: Open-Science-101/Module-3/readme.md
+  - file: Open-Science-101/Module-3/readme
     - file: Open-Science-101/Module-3/Lesson-1.md
     - file: Open-Science-101/Module-3/Lesson-2.md
     - file: Open-Science-101/Module-3/Lesson-3.md
