--- a/_toc.yml
+++ b/_toc.yml
@@ -21,3 +21,12 @@ parts:
     - file: Open-Science-101/Module-2/Lesson-4.md
     - file: Open-Science-101/Module-2/Lesson-5.md
     
+  - file: Open-Science-101/Module-3/readme
+    sections:
+    - file: Open-Science-101/Module-3/Lesson-1.md
+    - file: Open-Science-101/Module-3/Lesson-2.md
+    - file: Open-Science-101/Module-3/Lesson-3.md
+    - file: Open-Science-101/Module-3/Lesson-4.md
+    - file: Open-Science-101/Module-3/Lesson-5.md
+
+    
