--- a/_toc.yml
+++ b/_toc.yml
@@ -28,7 +28,7 @@ parts:
     - file: Open-Science-101/Module-3/Lesson-4.md
     - file: Open-Science-101/Module-3/Lesson-5.md
     
-  - file: Open-Science-101/Module-4/readme
+  - file: Open-Science-101/Module-4/readme.md
     sections:
     - file: Open-Science-101/Module-4/Lesson-1.md
     - file: Open-Science-101/Module-4/Lesson-2.md
@@ -36,7 +36,7 @@ parts:
     - file: Open-Science-101/Module-4/Lesson-4.md
     - file: Open-Science-101/Module-4/Lesson-5.md
     
-  - file: Open-Science-101/Module-5/readme
+  - file: Open-Science-101/Module-5/readme.md
     sections:
     - file: Open-Science-101/Module-5/Lesson-1.md
     - file: Open-Science-101/Module-5/Lesson-2.md
