--- a/_config.yml
+++ b/_config.yml
@@ -16,12 +16,14 @@ execute:
 # HTML-specific settings
 html:
   home_page_in_navbar       : false  # Whether to include your home page in the left Navigation Bar
-  baseurl                   : "https://cgentemann.github.io/Transform-to-Open-Science-Book"  # The base URL where your book will be hosted. Used for creating image previews and social links. e.g.: https://mypage.com/mybook/
+  baseurl                   : "https://nasa.github.io/Transform-to-Open-Science-Book"  # The base URL where your book will be hosted. Used for creating image previews and social links. e.g.: https://mypage.com/mybook/
   use_repository_button     : true
   use_edit_page_button      : true
   use_issues_button         : true
 #  google_analytics_id       : "UA-148221575-1"  # A GA id that can be used to track book views.
 
+parse:
+   myst_url_schemes: [mailto, http, https]
 
 repository:
   url                       : https://nasa.github.io/Transform-to-Open-Science  # The URL to your book's repository
