--- a/_config.yml
+++ b/_config.yml
@@ -22,14 +22,11 @@ html:
   use_issues_button         : true
 #  google_analytics_id       : "UA-148221575-1"  # A GA id that can be used to track book views.
 
-parse:
-   myst_url_schemes: [mailto, http, https]
-
 repository:
-  url                       : https://nasa.github.io/Transform-to-Open-Science  # The URL to your book's repository
-  branch                    : open-science-101  # Which branch of the repository should be used when creating links
-#  url                       : https://cgentemann.github.io/Transform-to-Open-Science-Book  # The URL to your book's repository
-#  branch                    : main  # Which branch of the repository should be used when creating links
+#  url                       : https://nasa.github.io/Transform-to-Open-Science  # The URL to your book's repository
+#  branch                    : open-science-101  # Which branch of the repository should be used when creating links
+   url                       : https://cgentemann.github.io/Transform-to-Open-Science-Book  # The URL to your book's repository
+   branch                    : main  # Which branch of the repository should be used when creating links
   
 sphinx:
   config:
