--- a/_toc.yml
+++ b/_toc.yml
@@ -7,7 +7,7 @@ parts:
   - url: https://github.com/nasa/Transform-to-Open-Science/blob/open-science-101/README.md
     title: Introduction to Open Science 101
   
-  - url: https://github.com/nasa/Transform-to-Open-Science/tree/open-science-101/Module_1/readme.md
+  - url: open-science-102/Module_1/readme.md
     title: Module 1 The Ethos of Open Science
   
     sections:
