--- a/.github/workflows/book.yml
+++ b/.github/workflows/book.yml
@@ -21,7 +21,7 @@ jobs:
 
     - name: Install dependencies
       run: |
-        pip install -r book-requirements-Linux-macOS.txt
+        pip install -r requirements.txt
     # Build the book
     - name: Build the book
       run: |
