--- a/_toc.yml
+++ b/_toc.yml
@@ -37,11 +37,13 @@ parts:
   chapters:
   - file: About/About-Announcements
   - file: About/tops_faq
-  - file: Open-Science-101/Test/Lesson_1/readme.md
-  - file: Open-Science-101/Test/Lesson_2/readme.md
-  - file: Open-Science-101/Test/Lesson_3/readme.md
-  - file: Open-Science-101/Test/Lesson_4/readme.md
-  - file: Open-Science-101/Test/Lesson_5/readme.md
+  - file: Open-Science-101/Module_5/readme.md
+    sections:
+    - file: Open-Science-101/Module_5/Lesson_1/readme.md
+    - file: Open-Science-101/Module_5/Lesson_2/readme.md
+    - file: Open-Science-101/Module_5/Lesson_3/readme.md
+    - file: Open-Science-101/Module_5/Lesson_4/readme.md
+    - file: Open-Science-101/Module_5/Lesson_5/readme.md
 - caption: Year of Open Science 
   chapters:
   - file: Year_of_Open_Science_Guide/readme
