--- a/_toc.yml
+++ b/_toc.yml
@@ -5,7 +5,7 @@ parts:
 - caption: Open Science 101
   chapters:
   - file: Open-Science-101/README
-  - file: Open-Science-101/Module_1/readme.md 
+  - file: Open-Science-101/Module_1/readme
     sections:
     - file: Open-Science-101/Module_1/Lesson_1/readme.md
     - file: Open-Science-101/Module_1/Lesson_2/readme.md
