--- a/_configswap.yml
+++ b/_configswap.yml
@@ -1,7 +1,7 @@
 # Book settings
-title                       : NASA's Transform to Open Science Initiative  # The title of the book. Will be placed in the left navbar.
+title                       : NASA's Transform to Open Science Mission  # The title of the book. Will be placed in the left navbar.
 author                      : TOPS Community # The author of the book
-copyright                   : "Responsible NASA Official: Paul M. Bremner"  # Copyright year to be placed in the footer
+copyright                   : "CC-BY"  # Copyright year to be placed in the footer
 logo                        : About/Tops_Badge_Nasa.png
 # Patterns to skip when building the book. Can be glob-style (e.g. "*skip.ipynb")
 exclude_patterns            : [_build, Thumbs.db, .DS_Store, "**.ipynb_checkpoints"]
@@ -16,7 +16,7 @@ execute:
 # HTML-specific settings
 html:
   home_page_in_navbar       : false  # Whether to include your home page in the left Navigation Bar
-  baseurl                   : "https://bressler95tops.github.io/bookdebug/"  # The base URL where your book will be hosted. Used for creating image previews and social links. e.g.: https://mypage.com/mybook/
+  baseurl                   : "https://nasa.github.io/Transform-to-Open-Science-Book"  # The base URL where your book will be hosted. Used for creating image previews and social links. e.g.: https://mypage.com/mybook/
   use_repository_button     : true
   use_edit_page_button      : true
   use_issues_button         : true
@@ -24,7 +24,7 @@ html:
 
 
 repository:
-  url                       : https://github.com/bressler95tops/bookdebug  # The URL to your book's repository
+  url                       : https://github.com/nasa/Transform-to-Open-Science-Book  # The URL to your book's repository
   branch                    : main  # Which branch of the repository should be used when creating links
 
 sphinx:
