try to go up a level

--- a/.github/workflows/download-source.yml
+++ b/.github/workflows/download-source.yml
@@ -5,6 +5,8 @@ jobs:
   wget:
       runs-on: ubuntu-latest
       steps:
+      - name: Go up a level
+        run: cd ../
       - name: List files, see what actually exists
         run: ls
       - name: Download a file
