add a file to the command again since it is vaguely saying that a directory was provided

--- a/.github/workflows/download-source.yml
+++ b/.github/workflows/download-source.yml
@@ -9,4 +9,4 @@ jobs:
       - name: List files, see what actually exists
         run: ls
       - name: Download a file
-        run: wget https://raw.githubusercontent.com/nasa/Transform-to-Open-Science/open-science-101/README.md -O download/folder
+        run: wget https://raw.githubusercontent.com/nasa/Transform-to-Open-Science/open-science-101/README.md -O download/folder/target.md
