remove copyright since that doesn't behave as expected

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Book settings
 title                       : NASA's Transform to Open Science Initiative  # The title of the book. Will be placed in the left navbar.
 author                      : TOPS Community # The author of the book
-copyright                   : "Responsible NASA Official: Paul M. Bremner"  # Copyright year to be placed in the footer
+# copyright                   : "Responsible NASA Official: Paul M. Bremner"  # Copyright year to be placed in the footer
 logo                        : About/Tops_Badge_Nasa.png
 # Patterns to skip when building the book. Can be glob-style (e.g. "*skip.ipynb")
 exclude_patterns            : [_build, Thumbs.db, .DS_Store, "**.ipynb_checkpoints"]
