use sphinx config to hide copyright

--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,7 @@ repository:
 
 sphinx:
   config:
+    html_show_copyright: false
     exclude_patterns:
       - README.md
     myst_enable_extensions: 
